--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@ html{
     scroll-behavior: smooth;
 }
 
+
+
 /* WELCOME */
 .welcome{
     width: 20%;
@@ -71,29 +73,16 @@ html{
 /* ABOUT */
 
 
-.start1 nav{
-    margin-top: 4%;
-    margin-left: 0;
-}
-
-.start1 nav ul li{
-    display: inline;
-}
-
-
-.start1 nav ul li a{
-    margin-right: 80%;
+.start1 a{
     color: blue;
+    font-size: 20px;
+    font-weight: 900;
     text-decoration: none;
-    
 }
 
-
-.start1 nav ul li a:hover{
+.start1 a:hover{
     color: rgb(37, 37, 39);
-    font-size: 20px;
-    transform: translateY(-10px);
-    
+    font-size: 35;
 }
 
 .about-me{
@@ -182,30 +171,21 @@ html{
   
 }
 
-.an1 nav{
-    margin-top: 4%;
-}
 
-.an1 nav ul li{
-    display: inline;
-}
-
-
-.an1 nav ul li a{
-    /* margin-right: 80%; */
+.an1 a{
     color: blue;
-    text-decoration: none;
-    margin-top: 3%;
-    margin-left: 15%;
-}
-
-
-.an1 nav ul li a:hover{
-    color: rgb(37, 37, 39);
     font-size: 20px;
-    transform: translateY(-10px);
-    
+    font-weight: 900;
+    text-decoration: none;
+    margin-left: 15%;
+    margin-top: 1%;
 }
+
+.an1 a:hover{
+    color: rgb(37, 37, 39);
+    font-size: 35;
+}
+
 
 .an{
     display: flex;
@@ -310,29 +290,20 @@ html{
     transform: translateY(-10px);
 }
 
-.container-skills nav{
-    margin-top: 3%;
-}
 
 
-.container-skills nav ul li{
-    display: inline;
-}
-
-
-.container-skills nav ul li a{
-    /* margin-right: 80%; */
+.container-skills a{
     color: blue;
+    font-size: 20px;
+    font-weight: 900;
     text-decoration: none;
     
+    margin-top: 1%;
 }
 
-
-.container-skills nav ul li a:hover{
+.container-skills a:hover{
     color: rgb(37, 37, 39);
-    font-size: 20px;
-    transform: translateY(-10px);
-    
+    font-size: 35;
 }
 
 
@@ -363,16 +334,6 @@ html{
     font-family: Oxygen;
 }
 
-.container h1::after{
-    content: '';
-    background: #303ef7;
-    width: 100px;
-    height: 5px;
-    position: absolute;
-    bottom: -5px;
-    left: 50%;
-    transform: translateX(-50%);
-}
 
 .row{
     display: grid;
@@ -413,31 +374,21 @@ html{
 }
 
 
-
-.container nav{
-    margin-top: 3%;
-}
-
-
-.container nav ul li{
-    display: inline;
-}
-
-
-.container nav ul li a{
-    /* margin-right: 80%; */
+.container a{
     color: blue;
-    text-decoration: none;
-    
-}
-
-
-.container nav ul li a:hover{
-    color: rgb(37, 37, 39);
     font-size: 20px;
-    transform: translateY(-10px);
-    
+    font-weight: 900;
+    text-decoration: none;
+    margin-left: 5%;
+    margin-top: 1%;
 }
+
+.container a:hover{
+    color: rgb(37, 37, 39);
+    font-size: 35;
+}
+
+
 
 /* contact me */
 
@@ -453,16 +404,7 @@ html{
     position: relative;
 }
 
-.con-contactme h1::after{
-    content: '';
-    background: #303ef7;
-    width: 100px;
-    height: 5px;
-    position: absolute;
-    bottom: -5px;
-    left: 50%;
-    transform: translateX(-50%);
-}
+
 
 .row3{
     display: flex;
@@ -585,6 +527,21 @@ form input,form textarea{
 }
 
 
+.copyright a{
+    color: blue;
+    font-size: 20px;
+    font-weight: 900;
+    text-decoration: none;
+    margin-left: 5%;
+    margin-top: 1%;
+}
+
+.copyright a:hover{
+    color: rgb(37, 37, 39);
+    font-size: 35;
+}
+
+/* 
 .copyright nav{
     margin-top: 3%;
 }
@@ -596,7 +553,6 @@ form input,form textarea{
 
 
 .copyright nav ul li a{
-    /* margin-right: 80%; */
     color: blue;
     text-decoration: none;
     
@@ -608,7 +564,7 @@ form input,form textarea{
     font-size: 20px;
     transform: translateY(-10px);
     
-}
+} */
 
 
 
@@ -654,7 +610,7 @@ nav ul{
 
 nav ul li{
     display: inline-block;
-    margin: 50px;
+    margin: 45px;
 }
 .bi-x-lg{
     position: absolute;
@@ -664,15 +620,59 @@ nav ul li{
 }
 
 .image img{
-    height: 28vh;
-    margin-left: 22px;
-    margin-right: 9px;
+    height: 27vh;
+    
 }
 
 .start2 img{
     height: 30vh;
 
 }
+
+/* .welcome{
+    margin-bottom: 40%;
+} */
+
+.about-me{
+    flex-direction: column;
+    text-align: center;
+    margin-top: 50%;
+}
+
+.start1{
+    width: 100%;
+    text-align: center;
+}
+
+
+.an1 p{
+    text-align: center;
+    font-size: smaller;
+    display: inline-block;
+}
+
+
+.welcome{
+    font-size: 18px;
+    margin-top: 2%;
+}
+
+.head-left h1{
+    font-size: 30px;
+}
+.an{
+    display: block;
+}
+
+.my-experience{
+    margin-top: 50%;
+}
+
+.container-skills{
+    margin-top: 50px;
+}
+
+
 }
 
 #msg{
